--- a/src/app/home/nodes/nodes.component.html
+++ b/src/app/home/nodes/nodes.component.html
@@ -26,14 +26,14 @@
         </div>
     </div>
     <div class="card-container d-flex flex-column w-100 mb-3">
-        <div *ngIf="records.length==0" class="rounded-lg border bg-white p-4">
+        <div *ngIf="nodeList.length==0" class="rounded-lg border bg-white p-4">
             <p class="m-0">No Records Found, <button type="button" class="btn btn-link px-1 py-0"
                     (click)="newNode()">Click
                     Here</button> to create a new Node
                 <span *ngIf="searchTerm">:&nbsp;<span class="fw-500">{{searchTerm}}</span></span>
             </p>
         </div>
-        <div *ngIf="records.length>0" class="list-group mb-3">
+        <div *ngIf="nodeList.length>0" class="list-group mb-3">
             <div
                 class="list-group-item header d-flex align-items-center justify-content-start py-0 bg-light text-uppercase font-11 fw-500">
                 <div (click)="applySort('name')" class="hover d-flex align-items-center item-name">
@@ -41,58 +41,54 @@
                     <span *ngIf="sortModel['name']==1" class="dsi dsi-drop-down"></span>
                     <span *ngIf="sortModel['name']==-1" class="dsi dsi-drop-up"></span>
                 </div>
-                <div (click)="applySort('inputNode.type')" class="hover d-flex align-items-center item-status">
-                    <span class="mr-2">Input Type</span>
-                    <span *ngIf="sortModel['inputNode.type']==1" class="dsi dsi-drop-down"></span>
-                    <span *ngIf="sortModel['inputNode.type']==-1" class="dsi dsi-drop-up"></span>
+                <div (click)="applySort('type')" class="hover d-flex align-items-center item-status">
+                    <span class="mr-2">Type</span>
+                    <span *ngIf="sortModel['type']==1" class="dsi dsi-drop-down"></span>
+                    <span *ngIf="sortModel['type']==-1" class="dsi dsi-drop-up"></span>
                 </div>
                 <div class="d-flex align-items-center">
-                    <div (click)="applySort('url')" class="hover d-flex align-items-center item-url">
+                    <!-- <div (click)="applySort('url')" class="hover d-flex align-items-center item-url">
                         <span class="mr-2">URL</span>
                         <span *ngIf="sortModel['url']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['url']==-1" class="dsi dsi-drop-up"></span>
-                    </div>
-                    <div (click)="applySort('status')" class="hover d-flex align-items-center item-status">
+                    </div> -->
+                    <!-- <div (click)="applySort('status')" class="hover d-flex align-items-center item-status">
                         <span class="mr-2">Status</span>
                         <span *ngIf="sortModel['status']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['status']==-1" class="dsi dsi-drop-up"></span>
-                    </div>
-                    <div (click)="applySort('lastInvoked')" class="hover d-flex align-items-center item-last-invoked">
+                    </div> -->
+                    <!-- <div (click)="applySort('lastInvoked')" class="hover d-flex align-items-center item-last-invoked">
                         <span class="mr-2">Last Invoked</span>
                         <span *ngIf="sortModel['lastInvoked']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['lastInvoked']==-1" class="dsi dsi-drop-up"></span>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="d-flex w-100 justify-content-end">
                     <div class="item-actions"></div>
                 </div>
             </div>
             <div class="list-group-item d-flex align-items-center justify-content-start hover"
-                *ngFor="let item of records;let i=index" (dblclick)="viewNode(item)">
+                *ngFor="let item of nodeList;let i=index" (dblclick)="viewNode(item)">
                 <div class="item-name fw-500 d-flex align-items-center">
                     <span class="ml-2 pl-1 text-dark text-truncate" [ngbTooltip]="item.name"
                         placement="right">{{item.name}}</span>
                     <span class="ml-2 version sub-heading font-11 text-uppercase">(v{{(item.version||1)}})</span>
-                    <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span>
+                    <!-- <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span> -->
                 </div>
                 <div class="d-flex align-items-center" (dblclick)="viewNode(item)">
                     <div class="sub-heading item-status d-flex align-items-center">
-                        <span class="text font-12 fw-400">{{item?.inputNode?.type}}</span>
+                        <span class="text font-12 fw-400">{{item?.type}}</span>
                     </div>
-                    <div class="sub-heading item-url pr-3 d-flex align-items-center">
+                    <!-- <div class="sub-heading item-url pr-3 d-flex align-items-center">
                         <span *ngIf="copied[item._id]" class="text-accent mr-2">Copied!</span>
                         <span *ngIf="!copied[item._id]" class="dsi dsi-copy text-accent mr-2 hover"
                             (click)="copyUrl(item)"></span>
                         <span class="text-truncate" [ngbTooltip]="item.url" container="body">{{item.url}}</span>
-                    </div>
-                    <div class="sub-heading item-status d-flex align-items-center">
-                        <span class="fa fa-circle mr-2" [ngClass]="getStatusClass(item)"></span>
-                        <span class="text font-12 fw-400">{{getStatusLabel(item)}}</span>
-                    </div>
-                    <div class="sub-heading item-last-invoked">
+                    </div> -->
+                    <!-- <div class="sub-heading item-last-invoked">
                         <span *ngIf="item.lastInvoked">{{item.lastInvoked | date:'medium'}}</span>
                         <span *ngIf="!item.lastInvoked" class="text-muted">-</span>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="d-flex w-100 align-items-center justify-content-end">
                     <div class="item-actions d-flex align-items-center justify-content-end">
@@ -125,10 +121,10 @@
                                     *ngIf="canManageNode(item._id)" (click)="cloneNode(item)">
                                     Clone
                                 </div>
-                                <button class="list-group-item list-group-item-action py-2 border-0"
+                                <!-- <button class="list-group-item list-group-item-action py-2 border-0"
                                     *ngIf="item.draftVersion || item.status=='Draft' && canManageNode(item._id)"
                                     (click)="discardDraft(item._id)">Discard
-                                    Draft</button>
+                                    Draft</button> -->
                                 <div class="list-group-item list-group-item-action py-2 border-0 text-danger"
                                     *ngIf="canManageNode(item._id)" (click)="deleteNode(i)">
                                     Delete
