--- a/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
@@ -131,14 +131,14 @@
             </odp-node-data-selector>
         </div>
     </ng-container>
-    <ng-container *ngIf="currNode.options.update || currNode.options.insert">
+    <!-- <ng-container *ngIf="currNode.options.update || currNode.options.insert">
         <div class="form-group position-relative">
             <label class="font-14 fw-400 text-dark mb-0" for="nodeBody">Body</label>
             <odp-input-data-selector class="d-flex" [edit]="edit" [(data)]="currNode.options.body"
                 [currNode]="currNode">
             </odp-input-data-selector>
         </div>
-    </ng-container>
+    </ng-container> -->
     <div class="border rounded p-3">
         <div class="border-bottom font-14 fw-500 mb-3 pb-1">Advanced Settings</div>
         <div class="form-group position-relative">
