--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -173,7 +173,7 @@
           <div *ngIf="hasConnectorsPermission" #nodeRoute="routerLinkActive"
             class="icon-block d-flex align-items-center my-3"
             [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
-            routerLinkActive="text-primary bg-white active" [routerLink]="['node']" id="_nodes">
+            routerLinkActive="text-primary bg-white active" [routerLink]="['processNode']" id="_nodes">
             <div class="d-flex align-items-center">
               <span [ngClass]="{'nav-inactive':!nodeRoute.isActive}" class="dsi dsi-connector"></span>
               <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
