--- a/src/app/home/nodes/nodes.component.html
+++ b/src/app/home/nodes/nodes.component.html
@@ -102,8 +102,8 @@
                                 <!-- <span class="fw-600 font-13 hover mr-3" *ngIf="canStartStopNode(i)"
                                     (click)="toggleNodeStatus(item)">{{item.status === 'Active' ? 'Stop' :
                                     'Start'}}</span> -->
-                                <!-- <span class="dsi dsi-more-vertical hover mr-3 ignore-outside"
-                                    (click)="showDropDown($event,i)"></span> -->
+                                <span class="dsi dsi-more-vertical hover mr-3 ignore-outside"
+                                    (click)="showDropDown($event,i)"></span>
                             </ng-container>
                             <div *ngIf="showOptionsDropdown[i]"
                                 class="more-options bg-white rounded list-group position-fixed border"
