--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -145,11 +145,7 @@
           </div>
         </div>
       </ng-container>
-      <ng-container *ngIf="
-      hasConnectorsPermission||
-      hasDataFormatPermission||
-      hasAgentsPermission||hasFlowsPermission
-    ">
+      <ng-container *ngIf="experimentalFeatures">
         <div class="icon-block-group text-secondary border-top border-border pt-3">
           <span *ngIf="showSideNav" class="nav-active d-flex align-items-center">
             <span>PROCESS FLOWS</span>
