User and event node screens base

--- a/src/app/home/nodes/node-details/node-details.component.html
+++ b/src/app/home/nodes/node-details/node-details.component.html
@@ -33,8 +33,12 @@
             </odp-basic-info>
         </div>
         <div class="d-flex flex-column px-4 pb-4" >
-            <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4" [ngSwitch]="nodeType">
-              <odp-system-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngSwitchDefault></odp-system-node>
+            <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4" >
+                <odp-user-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'USER'"></odp-user-node>
+
+                <odp-event-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'EVENT'"></odp-event-node>
+
+              <odp-system-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'SYSTEM'"></odp-system-node>
             </div>
            
         </div>
