Process flow base screen template

--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.scss
@@ -63,6 +63,9 @@ text.path-text {
     .rect {
         fill: rgba($accent, 0.3);
     }
+    .ellipse{
+        fill: rgba($accent, 0.3);
+    }
 
     // text:not(.node-name):not(.id-holder) {
     //     stroke-width: 0.75 !important;
