System node payload changes

--- a/src/app/home/nodes/node-details/node-details.component.html
+++ b/src/app/home/nodes/node-details/node-details.component.html
@@ -34,11 +34,11 @@
         </div>
         <div class="d-flex flex-column px-4 pb-4" >
             <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4" >
-                <odp-user-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'USER'"></odp-user-node>
+                <odp-user-node [edit]="edit" [options]="api" [dataStructure]="dataStructure" *ngIf="nodeType === 'USER'"></odp-user-node>
 
-                <odp-event-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'EVENT'"></odp-event-node>
+                <odp-event-node [edit]="edit" [options]="api" [dataStructure]="dataStructure" *ngIf="nodeType === 'EVENT'"></odp-event-node>
 
-              <odp-system-node [edit]="edit" [options]="options" [dataStructure]="dataStructure" *ngIf="nodeType === 'SYSTEM'"></odp-system-node>
+              <odp-system-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'SYSTEM' && node.name" (onChangeData)="onChangeData($event)"></odp-system-node>
             </div>
            
         </div>
